app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --text-white: #F8F8F8;
  --nebula-orange: rgb(143, 95, 67);
  --deep-blue: rgb(26, 41, 92);
  --jupiter-dark-beige: rgb(133 123 102);
  --muted-gold: rgb(197, 158, 92);
}

* {
  box-sizing: border-box;
  @apply text-gray-300;
}

body {
  background-color: radial-gradient(circle at center, rgb(26, 41, 92) 0%, rgb(42, 63, 136) 60%, rgb(19, 30, 67) 100%);
}

html {
  scroll-behavior: smooth;
}

html,
body,
#root {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

p {
  position: relative;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

/************************************************************
                          General
*************************************************************/
.main-container {
  @apply flex flex-col text-text text-start items-center z-20 pb-36;
}

.character {
  box-shadow: inset 2px 2px 15px rgba(255,255,255,.5);
}

/************************************************************
                          Sidebar
*************************************************************/

.selected-menu-item {
  background: linear-gradient(135deg, rgba(255, 153, 102, 0.8), rgba(255, 140, 0, 0.6));
  box-shadow: 0 0 12px rgba(255, 153, 102, 0.8);
  color: rgb(255, 165, 0);
  border-radius: 4px;
  margin: 0.2rem 0.4rem;
}

/************************************************************
                            Markdown
*************************************************************/

.markdown {
  @apply text-lg leading-relaxed;
}

.markdown p,
.markdown ul,
.markdown ol,
.markdown blockquote {
  @apply my-6;
}

.markdown h2 {
  @apply text-3xl mt-12 mb-4 leading-snug;
}

.markdown h3 {
  @apply text-2xl mt-8 mb-4 leading-snug;
}

/************************************************************
                            Menu
*************************************************************/

@media (max-width: 2000px) {
  .menu {
      top: 50%;
      transform: translateY(-50%);
  }
}

.menu {
  position: fixed;
  left: 20px;
  top: 322px;
  width: 55px;
  text-align: center;
  padding: 24px 0;
  z-index: 20;
}

.menu.mobile {
  left: 12px;
  top: 138px;
}

::selection {
  color: var(--deep-blue);
  background: var(--nebula-orange);
}

/************************************************************
                  Resume Timeline Styling
*************************************************************/

.timeline-item {
  margin-bottom: 50px;
  transform: translateX(-100px);
  transition: all 0.5s ease-in-out;
  opacity: 0;
}

.timeline-item.in-view {
  opacity: 1;
  transform: translateX(0);
}

.timeline-item.in-view:not(:last-child):hover {
  color: #00FFFF;
  text-shadow: 0px 0px 8px rgba(0, 255, 255, 0.4);
  {{/* box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
  background: linear-gradient(135deg, rgba(26, 41, 92, 0.45) 20%, rgba(19, 30, 67, 0.45) 80%); */}}
}

.timeline-content {
  display: block;
  padding: 25px;
  border-radius: 6px;
  color: var(--text--white);

  position: relative;
  left: 50%;
  transform: translateX(-50%);
}

.timeline-content h2 {
  margin: 0 0 10px;
  font-size: 1.5em;
}

.timeline-content p {
  margin: 0;
}

.timeline-content::before {
  content: '';
  position: absolute;
  width: 12px;
  height: 12px;
  background: var(--text-white);
  border-radius: 50%;
  left: -30px;
  top: 7px;
  transition: .3s;
}

.timeline-content:hover::before {
  background-color: var(--nebula-orange);
}

.timeline-content::after {
  content: '';
  background: #333333;
  width: 1px;
  height: 145%;
  position: absolute;
  left: -25px;
  top: 10px;
  z-index: -1;
}

